# NES-Emulator

./: Cargo.toml  Dockerfile  README.md  build.rs  opcode_populate.py  ops_codes.json
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/bus/: mod.rs
src/cpu/: instructions.rs  interrupt.rs  mod.rs  processor_status.rs
src/cpu/instructions/: instruction_set.rs  mod.rs
src/ppu/: address.rs  address_register.rs  control.rs  frame.rs  mod.rs  registers.rs  render.rs  scroll.rs
src/rom/: mod.rs
static/: index.html
tests/: test_rom.rs
