[package]
name = "nes"
version = "0.1.0"
authors = ["Stephen Leyva <sleyva1297@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bitflags = "1.2.1"

sdl2 = "0.35"
rand = "0.8"
bytes = "1"

[build-dependencies]
serde_json = "1.0"
codegen = "0.1"

[test-dependencies]